@@ -212,15 +212,25 @@ class TemplateOperations
 		return $result;
 	}
 
-	function TouchAllTemplates()
+	function TouchAllTemplates($blob_name='')
 	{
 		$result = false;
 
 		global $gCms;
 		$db = &$gCms->db;
 
-		$query = "UPDATE ".cms_db_prefix()."templates SET modified_date = ?";
-		$dbresult = $db->Execute($query,array($db->DBTimeStamp(time())));
+		$dbresult = false;
+
+		if ($blob_name != '')
+		{
+			$query = "UPDATE ".cms_db_prefix()."templates SET modified_date = ? WHERE template_content like ?";
+			$dbresult = $db->Execute($query,array($db->DBTimeStamp(time()),'%{html_blob name="'.$blob_name.'"}%'));
+		}
+		else
+		{
+			$query = "UPDATE ".cms_db_prefix()."templates SET modified_date = ?";
+			$dbresult = $db->Execute($query,array($db->DBTimeStamp(time())));
+		}
 
 		if ($dbresult !== false)
 		{
